# api-faq

./: LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8025c59f0316_construindo_o_db.py
backend/: config.py  main.py
backend/crud/: usuario.py
backend/db/: base.py  sessao.py
backend/models/: __init__.py  palavrachave.py  pergunta.py  pesquisa.py  resposta.py  usuario.py
backend/routes/: auth.py  question.py  user.py
backend/schemas/: login.py  resposta.py  usuario.py
